#
# Makefile.am for liby2util/src/qt
#

y2qtincludedir = $(includedir)/y2util/qt

# these go to $(pkgincludedir)

y2qtinclude_HEADERS = \
	qasciidict.h	\
	qbitarray.h	\
	qconfig.h	\
	qcstring.h	\
	qdatastream.h	\
	qfeatures.h	\
	qgarray.h	\
	qgdict.h	\
	qglist.h	\
	qglobal.h	\
	qgvector.h	\
	qiodevice.h	\
	qmemarray.h	\
	qmodules.h	\
	qplatformdefs.h	\
	qptrcollection.h	\
	qptrlist.h	\
	qregexp.h	\
	qshared.h	\
	qstring.h	\
	qstringlist.h	\
	qstrlist.h	\
	qtextstream.h	\
	qtl.h	\
	qvaluelist.h

EXTRA_DIST = 	\
	qbitarray.cpp	\
	qcstring.cpp	\
	qdatastream.cpp	\
	qgarray.cpp	\
	qgdict.cpp	\
	qglist.cpp	\
	qglobal.cpp	\
	qgvector.cpp	\
	qiodevice.cpp	\
	qptrcollection.cpp	\
	qregexp.cpp	\
	qstring.cpp	\
	qstringlist.cpp	\
	qtextstream.cpp

